# python-irc

./: .env.example  .gitignore  LICENSE  README.rst  TODO.rst  conf.py  index.rst  motd.example.txt  operators.example.txt  pyproject.toml
.github/workflows/: python-package.yml  python-test.yml
client/: TCPClient.py
server/: TCPServer.py
src/client/: Client.py  IRCClient.py  README.rst
src/irc/: IRCChannel.py  IRCMessage.py  IRCUser.py  README.rst  logger.py
src/lib/: Channel.py  Message.py  User.py  logger.py
src/server/: ClientHandler.py  IRCClientHandler.py  IRCServer.py  README.rst  Reply.py  Server.py  ServerState.py  cli.py  config.py  replies.py
src/server/MessageHandlers/: Cap.py  Error.py  Handler.py  Join.py  Kick.py  LUsers.py  List.py  Mode.py  Motd.py  Names.py  Nick.py  Oper.py  Part.py  Pass.py  Ping.py  PrivMsg.py  Reply.py  Time.py  Topic.py  User.py  UserHost.py  Users.py  handlers.py
tests/client/: test_IRCClient.py  test_TCPClient.py
tests/integration/client/: test_IRCClient.py
tests/integration/server/: conftest.py  test_IRCServer.py  test_Server_connect.py  test_Server_join.py  test_Server_mode.py  test_Server_oper.py  test_Server_part.py  test_Server_register.py  utils.py
tests/irc/: test_IRCMessage.py
tests/server/: test_IRCServer.py  test_TCPServer.py
tests/unit/irc/: test_Channel.py  test_IRCMessage.py  test_User.py
tests/unit/lib/: test_Channel.py  test_Message.py  test_User.py
